--- a/assets/css/footer-style.css
+++ b/assets/css/footer-style.css
@@ -1,9 +1,4 @@
 footer{
-  position: fixed;
-  z-index: 9999;
-  bottom: 0;
-  left: 0;
-  width: 100%;
   height: 70px;
   background-color: var(--bottom-menu-background-color);
 }
