--- a/assets/css/header-style.css
+++ b/assets/css/header-style.css
@@ -1,4 +1,4 @@
-header{
+.cta{
   position: fixed;
   z-index: 999;
   top: 0;
